UI fixes for spinner overlay and template list
[#680]Fixed the styling per Joni
[#691]Added CSS to ensure scrollbar always shown


Former-commit-id: 89a1c8ded922c3cc205a04b1421d06313ed601eb

--- a/www/css/overlays.css
+++ b/www/css/overlays.css
@@ -26,6 +26,26 @@
 	background-color:rgb(204,204,204);
 }
 
+.loading-overlay-content.dark {
+	position:absolute;
+	top: 0px;
+	left: 75px;
+	width: 375px;
+	height:100%;
+	background-color: rgba(0, 0, 0, 0.85);	
+}
+
+.loading-overlay-sidebar.dark {
+	position:absolute;
+	top: 0px;
+	left: 0px;
+	width: 75px;
+	height:100%;
+	opacity: 0.75;
+	background-color: rgba(0, 0, 0, 0.85);
+}
+
+
 .topcoat-overlay-large {
 	padding:0;
 	margin:0;
